# progremers

./: .gitignore  DEVELOPMENT_SUMMARY.md  Dockerfile  FINAL_LAUNCH_GUIDE.md  FINAL_SYSTEM_SUMMARY.md  PROJECT_EVALUATION_REPORT.md  PROJECT_LAUNCH_REPORT_proj-20250729121911.md  README.md  README_USER_GUIDE.md  START_GUIDE.md  advanced_hotel_analysis.py  analyze_hotel_project.py  api_server.py  batch_import_projects.py  check_database.py  check_ports.py  database_check_result.json  direct_hotel_analysis.py  docker-compose.yml  hotel_analysis_ai_team_report.json  hotel_business_value_analysis.json  import_project_example.py  manual_code_analysis.py  manual_code_analysis_report.json  nginx.conf  ports.json  project_launcher.py  pyproject.toml  quick_start.sh  requirements.txt  self_evaluation.py  setup_database.py  simple_db_check.py  smart_start.py  start.sh  start_system.sh  start_team.py  test_architect_agent.py  test_core_system.py  test_developer_agent.py  (+5 more)
docs/: BGE_M3_SETUP.md
frontend/: Dockerfile  README.md  index.html  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/components/: Navbar.tsx  Sidebar.tsx
frontend/src/pages/: AgentMonitoring.tsx  Dashboard.tsx  ProjectLaunchpad.tsx  ProjectManagement.tsx  Settings.tsx  SystemEvaluation.tsx  TaskAnalysis.tsx  TeamCollaboration.tsx
scripts/: auto_checkpoint.py  install_bge_m3.py  restore_local_config.py  setup_database.py
src/: __init__.py  cli.py  main.py  user_service.py
src/agents/base/: __init__.py  base_agent.py  (+1 more)
src/config/: __init__.py  settings.py
src/utils/: __init__.py  logger.py
(+27 files in other folders)
