[tool.poetry]
name = "ai-agent-team"
version = "0.1.0"
description = "AI Agent Development Team - Simulating enterprise development workflows"
authors = ["AI Agent Team"]
readme = "README.md"
python = "^3.10"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.1.0"
langchain-openai = "^0.0.5"
langgraph = "^0.0.26"
autogen = "^0.2.0"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
sqlalchemy = "^2.0.25"
asyncpg = "^0.29.0"
redis = "^5.0.1"
pinecone-client = "^3.0.0"
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
httpx = "^0.26.0"
python-dotenv = "^1.0.0"
loguru = "^0.7.2"
click = "^8.1.7"
rich = "^13.7.0"
tenacity = "^8.2.3"
numpy = "^1.26.3"
pandas = "^2.1.4"
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
black = "^23.12.1"
flake8 = "^7.0.0"
mypy = "^1.8.0"
pre-commit = "^3.6.0"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
ipykernel = "^6.28.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.10"
disallow_untyped_defs = true
ignore_missing_imports = true
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"